# logs_aggregator

./: Cargo.toml
src/: main.rs
