[package]
name = "logs_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
rayon = "1.7.0"
memmap2 = "0.9.5"
crossbeam = "0.8.2"
walkdir = "2.3.3"
indicatif = "0.17.3"
aho-corasick = "1.1.3"
tokio = { version = "1.28.0", features = ["full"] }
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

parking_lot = "0.12.1"
num_cpus = "1.16.0"
windows-sys = { version = "0.59.0", features = ["Win32_Storage_FileSystem"] }
